--- a/Ingles/index_en.html
+++ b/Ingles/index_en.html
@@ -76,7 +76,7 @@
                             <a href="flamengo_en.html" target="principal" onclick="fechamenu()">Flamengo</a>
                         </li>
                         <li>
-                            <a href="campeoes_en.html" target="principal" onclick="fechamenu()">Outros</a>
+                            <a href="campeoes_en.html" target="principal" onclick="fechamenu()">Others</a>
                         </li>
                     </ul>
                 </div>
